--- a/styles/helpers.css
+++ b/styles/helpers.css
@@ -27,7 +27,10 @@
         max-width: 1200px;
     }
 }
-
+/*  */
+.text-center{
+    text-align: center;
+}
 /* border */
 .border-blue{
     border: 4px solid dodgerblue;
