--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,6 @@ main{
     min-height: 100vh;
 }
 
-
 /* classes */
 .faq-card{
     max-width: 900px;
@@ -34,8 +33,11 @@ main{
 }
 
 .card-image, .card-text{
-    width: 49%;
+    width: 48%;
     overflow: hidden;
+}
+.card-image{
+    margin-right: 30px;
 }
 .card-image .card-bg-image{
     position: absolute;
@@ -58,14 +60,32 @@ main{
 .card-question{
     border-bottom: 2px solid var(--divider-gray-blue);
     margin-bottom: 1rem;
-    line-height: 1.5;
 }
-.question{
+.btn-expand{
     font-weight: 700;
+    font-size: 1.2rem;
+    text-decoration: none;
+    color: var(--dark-gray-blue);
+}
+.btn-expand.active{
+    color: var(--dark-desaturated-blue);
+}
+.arrow-down-image{
+    height: fit-content;
+    transition: transform ease 0.35s;
+}
+.btn-expand.active .arrow-down-image{
+    transform: rotate(180deg);
 }
 .answer{
+    transition: all ease 0.5s;
     font-weight: 400;
+    line-height: 1.3;
     color: var(--dark-desaturated-blue);
+
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 }
 
 @media (max-width: 767px){
