--- a/styles/helpers.css
+++ b/styles/helpers.css
@@ -31,6 +31,16 @@
 .text-center{
     text-align: center;
 }
+.flex{
+    display: flex;
+    flex-wrap: nowrap;
+}
+.justify-between{
+    justify-content: space-between;
+}
+.align-center{
+    align-items: center;
+}
 /* border */
 .border-blue{
     border: 4px solid dodgerblue;
