--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ main{
     z-index: 1;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
 }
 
 .card-image, .card-text{
@@ -38,21 +38,28 @@ main{
 }
 .card-image{
     margin-right: 30px;
+    position: relative;
 }
-.card-image .card-bg-image{
+
+ .card-image-hidden{
+     visibility: hidden;
+ }
+ .card-bg-image{
     position: absolute;
-    top: -55%;
-    right: 55%; 
+    top: -70%;
+    right: 10%; 
 }
-.card-image .card-fg-image{
+ .card-fg-image{
     position: absolute;
     top: 15%;
-    left: -9%;
+    left: -13%;
+    width: 105%;
 }
 .card-box-image{
     position: absolute;
     top: 42%;
     left: -10%;
+    z-index: 11;
 }
 .faq-title{
     font-size: 3rem;
@@ -77,13 +84,20 @@ main{
 .btn-expand.active .arrow-down-image{
     transform: rotate(180deg);
 }
+input[type="radio"]{
+    display: none;
+    /* visibility: hidden; */
+}
+input:checked ~ .answer{
+    height: auto;
+}
 .answer{
     transition: all ease 0.5s;
     font-weight: 400;
     line-height: 1.3;
     color: var(--dark-desaturated-blue);
-
-    max-height: 0;
+    height: 0;
+    /* max-height: 0; */
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
@@ -91,12 +105,41 @@ main{
 @media (max-width: 767px){
     .faq-card{
         flex-direction: column;
+        position: relative;
         width: 90%;
+        margin-top: 200px;
+        margin-bottom: 100px;
     }
     
     .card-image, .card-text{
         width: 100%;
+        margin-left: 0;
+        margin-right: 0;
     }
+    .card-image{
+        display: flex;
+        justify-content: center;
+        margin-top: -110px;
+        padding-bottom: 30px;
+    }
+    .card-image-hidden, .card-box-image{
+        display: none;
+    }
+    .card-bg-image{
+        position: absolute;;
+        top: 55%;
+        left: 12%;
+        /* width: auto; */
+    }
+    .card-fg-image{
+        position: relative;
+        top: auto;
+        margin-left: -30px;
+        left: auto;
+        display: block;
+        width: auto;
+    }
+
 }
 
 
